tests/snapshots/snapshot_rendering__render_default.snap
---
source: tests/snapshot_rendering.rs
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP   Name     Hits  Services                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
