tests/snapshots/snapshot_rendering__render_default_config_editor_box.snap
---
source: tests/snapshot_rendering.rs
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP   Name     Hits  Services                                               │"
"│         Interfaces     Scan     Timeouts     UI               Config         │"
"│       █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█       │"
"│       █ > Ignore Patterns         -                                  █       │"
"│       █   Include Docker          [ ]                                █       │"
"│       █                             Regex patterns to ignore network│█       │"
"│       █                             interfaces                      │█       │"
"│       █                             These patterns will be matched  │█       │"
"│       █                             against interface names to      │█       │"
"│       █                             exclude them from scanning      │█       │"
"│       █                             NOTE: Common virtual interfaces │█       │"
"└───────█                             are already excluded through the│█───────┘"
"        █                             ────────────────────────────────┘█        "
" Log Lev█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█        "
"        ┌──────────────────────────────────────────────────────────────┐        "
"        │         <Ctrl-S>: save config | <Enter/Space>: modify        │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
