tests/snapshots/snapshot_rendering__render_default_config_editor_box_next_tab.snap
---
source: tests/snapshot_rendering.rs
assertion_line: 49
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP   Name     Hits  Services                                               │"
"│         Interfaces     Scan     Timeouts     UI               Config         │"
"│       █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█       │"
"│       █ > Service Discovery       [*]                                █       │"
"│       █   TCP Ports               22, 80, 443                        █       │"
"│       █   I/O Threads             dynamic                            █       │"
"│       █   Port Scan Threads       dynamic                            █       │"
"│       █                                Enable DNS service discovery │█       │"
"│       █                                (DNS-SD)                     │█       │"
"│       █                                When enabled, attempts to    │█       │"
"│       █                                discover services advertised │█       │"
"└───────█                                via DNS-SD/mDNS              │█───────┘"
"        █                                                              █        "
" Log Lev█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█        "
"        ┌──────────────────────────────────────────────────────────────┐        "
"        │         <Ctrl-S>: save config | <Enter/Space>: modify        │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
