tests/snapshots/snapshot_rendering__render_default_config_editor_ui_tab_wrapped_key.snap
---
source: tests/snapshot_rendering.rs
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP   Name     Hits  Services                                               │"
"│         Interfaces     Scan     Timeouts     UI               Config         │"
"│       █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█       │"
"│       █   Hide Bare IPs           [ ]                                █       │"
"│       █   Log Limit               1000                               █       │"
"│       █   Log Level               info                               █       │"
"│       █   Theme                   dark                               █       │"
"│       █ > Row Updated Highlight                                      █       │"
"│       █   Duration [s]            5  How long (in seconds) a row    │█       │"
"│       █   Emojis                  [*]stays highlighted green after  │█       │"
"│       █                              new information                │█       │"
"└───────█                              arrives for it - for example   │█───────┘"
"        █                              when a host responds to a ping │█        "
" Log Lev█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█        "
"        ┌──────────────────────────────────────────────────────────────┐        "
"        │         <Ctrl-S>: save config | <Enter/Space>: modify        │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
