tests/snapshots/snapshot_rendering__render_default_keybindings_popup.snap
---
source: tests/snapshot_rendering.rs
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   ╭──────────────────────────────────────────────────────────────────────╮   │"
"│   │Action                        Keystroke                              █│   │"
"│   │                                                                     █│   │"
"│   │Close                         Esc                                    █│   │"
"│   │Config                        Shift-C                                █│   │"
"│   │CopyToClipboard               Y, Ctrl-C, Ctrl-Shift-C                █│   │"
"│   │DecreaseLayoutFill            -                                      █│   │"
"│   │DecreaseVerbosity             G                                      ║│   │"
"│   │IncreaseLayoutFill            +                                      ║│   │"
"│   │IncreaseVerbosity             V                                      ║│   │"
"│   │Keybindings                   ?                                      ║│   │"
"└───│NavigateDown                  J, Down                                ║│───┘"
"    │NavigateLeft                  H, Left                                ║│    "
" Log│NavigatePagedown              Pagedown                               ║│    "
"    │NavigatePageup                Pageup                                 ║│    "
"    │NavigateRight                 L, Right                               ║│    "
"    │NavigateScrollToBeginning     Home                                   ║│    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                                "
